syntax = "proto3";
package libvegas;
option go_package = "./pb";

message VoteRequest {
    string candidateID = 1;
    int64 term = 2;
}

message VoteResponse {
    int64 term = 1;
    bool yes = 2;
}

message AppendEntriesRequest {
    int64 term = 1;
    string leaderID = 2;
    int64 prevLogIndex = 3;
    int64 prevLogTerm = 4;
    int64 leaderCommit = 5;
    repeated Entry entries = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
}

message Entry {
    string operation = 1;
    bytes key = 2;
    bytes value = 3;
}

